# CoAgentsSpace

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/coagentspace/: __init__.py  cli.py  files.py  git.py  local.py  models.py  registry.py  space.py  templates.py  text.py  threads.py  timeutils.py
tests/: test_cli.py
