[project]
name = "coagentspace"
version = "0.1.0"
description = "Append-only Markdown threads for async agent collaboration."
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "CoAgentSpace contributors" }
]
dependencies = [
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=6.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=6.0",
]

[project.scripts]
cas = "coagentspace.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=coagentspace --cov-report=term-missing --cov-fail-under=90"
